[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Sprites/produce_farm/dirt_patch_selected.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/produce_farm/seed_selected.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/produce_farm/water.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/produce_farm/water_selected.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/produce_farm/seed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/produce_farm/dirt_patch.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/produce_farm/harvest.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/produce_farm/harvest_selected.png" type="Texture" id=8]
[ext_resource path="res://Scripts/DirtPatch.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/My_handwritten_font-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Sprites/produce_farm/grain.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/produce_farm/fruit_selected.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/produce_farm/fruit.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/produce_farm/grain_selected.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/produce_farm/beans.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/produce_farm/beans_selected.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/produce_farm/grain_disabled.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/produce_farm/fruit_disabled.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/produce_farm/beans_disabled.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/solar_panel_farm/add_panel.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/solar_panel_farm/add_panel_selected.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/general/refresh_selected.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/general/refresh.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
font_data = ExtResource( 10 )

[node name="DirtPatchSlot" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPatch" type="TextureButton" parent="."]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 21 )
expand = true

[node name="Label" type="Label" parent="AddPatch"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirtPatch" type="TextureButton" parent="."]
visible = false
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="CenterContainer" parent="DirtPatch"]
anchor_right = 1.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seed" type="TextureButton" parent="DirtPatch/HBox"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true

[node name="SeedSelection" type="HBoxContainer" parent="DirtPatch/HBox"]
visible = false
margin_left = -4.0
margin_right = 154.0
margin_bottom = 50.0

[node name="Grain" type="TextureButton" parent="DirtPatch/HBox/SeedSelection"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 17 )
expand = true

[node name="Label" type="Label" parent="DirtPatch/HBox/SeedSelection/Grain"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fruit" type="TextureButton" parent="DirtPatch/HBox/SeedSelection"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="DirtPatch/HBox/SeedSelection/Fruit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beans" type="TextureButton" parent="DirtPatch/HBox/SeedSelection"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 19 )
expand = true

[node name="Label" type="Label" parent="DirtPatch/HBox/SeedSelection/Beans"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureButton" parent="DirtPatch/HBox"]
visible = false
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Countdown" type="Label" parent="DirtPatch/HBox/Water"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -15.0
margin_right = 25.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterTimer" type="Timer" parent="DirtPatch/HBox/Water"]

[node name="Harvest" type="TextureButton" parent="DirtPatch/HBox"]
visible = false
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="Refresh" type="TextureButton" parent="DirtPatch"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AddPatch" to="." method="_on_AddPatch_pressed"]
[connection signal="pressed" from="DirtPatch" to="." method="_on_DirtPatch_pressed"]
[connection signal="pressed" from="DirtPatch/HBox/Seed" to="." method="_on_Seed_pressed"]
[connection signal="pressed" from="DirtPatch/HBox/SeedSelection/Grain" to="." method="_on_Grain_pressed"]
[connection signal="pressed" from="DirtPatch/HBox/SeedSelection/Fruit" to="." method="_on_Fruit_pressed"]
[connection signal="pressed" from="DirtPatch/HBox/SeedSelection/Beans" to="." method="_on_Beans_pressed"]
[connection signal="pressed" from="DirtPatch/HBox/Water" to="." method="_on_Water_pressed"]
[connection signal="timeout" from="DirtPatch/HBox/Water/WaterTimer" to="." method="_on_WaterTimer_timeout"]
[connection signal="pressed" from="DirtPatch/HBox/Harvest" to="." method="_on_Harvest_pressed"]
[connection signal="pressed" from="DirtPatch/Refresh" to="." method="_on_Refresh_pressed"]
